--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "jsonpp",
   "main": "./lib/jsonpp",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "JSON pretty printer",
   "repository": "https://github.com/swenson/atom-jsonpp",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
